DSAT-148 force styling of scrollbar for Access issue (#101)

--- a/src/scenes/Document/scenes/Policy/components/Access/Access.css
+++ b/src/scenes/Document/scenes/Policy/components/Access/Access.css
@@ -88,6 +88,27 @@
   cursor: default;
 }
 
+.Access > ol {
+  padding-right: 10px;
+  margin-bottom: 10px;
+  /* Not currently supported https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Scrollbars */
+  /* scrollbar-color: #e2e8f0 #cbd5e0;
+  scrollbar-width: thin; */
+}
+.Access > ol::-webkit-scrollbar {
+  width: 0.5rem !important;
+  height: 0.5rem !important;
+}
+.Access > ol::-webkit-scrollbar-track {
+  background-color: #e2e8f0 !important;
+}
+.Access > ol::-webkit-scrollbar-thumb {
+  background-color: #cbd5e0 !important;
+}
+.Access > ol::-webkit-scrollbar-thumb {
+  border-radius: 0.25rem !important;
+}
+
 .Grant input[type='submit'],
 .Grant input[type='submit']:hover,
 .Grant input[type='submit']:focus {
